fix issue not showing on very wide ipads

--- a/src/groups/MapDiagram/MapDiagram.scss
+++ b/src/groups/MapDiagram/MapDiagram.scss
@@ -46,33 +46,3 @@
     }
   }
 }
-
-// Tablet and below
-@media only screen and (max-device-width: 1200px) {
-  .map-diagram--desktop {
-    display: none;
-  }
-
-  .map-diagram--mobile {
-  }
-}
-
-// Tablet retina and below
-@media only screen and (max-device-width: 1200px) and (-webkit-min-device-pixel-ratio: 2) {
-  .map-diagram--desktop {
-    display: none;
-  }
-
-  .map-diagram--mobile {
-  }
-}
-
-// Tablet retina and below
-@media only screen and (max-device-width: 1200px) and (-webkit-min-device-pixel-ratio: 3) {
-  .map-diagram--desktop {
-    display: none;
-  }
-
-  .map-diagram--mobile {
-  }
-}
